cabal-version:      3.0
name:               portage-hs
version:            0.1.0.0
synopsis:
    Data structures for interacting with the Portage package manager

-- A longer description of the package.
-- description:
homepage:           https://github.com/hololeap/portage-hs

-- A URL where users can report bugs.
bug-reports:        https://github.com/hololeap/portage-hs/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             hololeap
maintainer:         hololeap@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           System
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite portage-hs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.1.0
